@@ -84,23 +84,27 @@ This has received only limited testing and so may not work in all browsers and s
 #### doctypeString
 A doctype string to use on the printThis iframe. Defaults to the HTML5 doctype.
 
+#### removeScripts
+Deletes script tags from the content to avoid errors or unexpected behavior during print.
+
 ### All Options
 ```javascript
 $("#mySelector").printThis({
-    debug: false,               * show the iframe for debugging
-    importCSS: true,            * import page CSS
-    importStyle: false,         * import style tags
-    printContainer: true,       * grab outer container as well as the contents of the selector
-    loadCSS: "path/to/my.css",  * path to additional css file - use an array [] for multiple
-    pageTitle: "",              * add title to print page
-    removeInline: false,        * remove all inline styles from print elements
-    printDelay: 333,            * variable print delay; depending on complexity a higher value may be necessary
-    header: null,               * prefix to html
-    footer: null,               * postfix to html
-    base: false                 * preserve the BASE tag, or accept a string for the URL
-    formValues: true            * preserve input/form values
-    canvas: false               * copy canvas elements (experimental)
-    doctypeString: "..."        * enter a different doctype for older markup
+    debug: false,               // show the iframe for debugging
+    importCSS: true,            // import page CSS
+    importStyle: false,         // import style tags
+    printContainer: true,       // grab outer container as well as the contents of the selector
+    loadCSS: "path/to/my.css",  // path to additional css file - use an array [] for multiple
+    pageTitle: "",              // add title to print page
+    removeInline: false,        // remove all inline styles from print elements
+    printDelay: 333,            // variable print delay; depending on complexity a higher value may be necessary
+    header: null,               // prefix to html
+    footer: null,               // postfix to html
+    base: false ,               // preserve the BASE tag, or accept a string for the URL
+    formValues: true,           // preserve input/form values
+    canvas: false,              // copy canvas elements (experimental)
+    doctypeString: "...",       // enter a different doctype for older markup
+    removeScripts: false        // remove script tags from print content
 });
 ```
 
